Fix bad windows URI/path in TomcatWebAppBuilder.java Fix TomEEWebappExtension.java and RemoteTomEEExtension.java multiple registration exceptions. Update to Maven.resolver() syntax and libs. Finals.
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb@1415216 13f79535-47bb-0310-9956-ffa450edef68